--- a/recommendation/templates/recommendation/recommendation_rating.html
+++ b/recommendation/templates/recommendation/recommendation_rating.html
@@ -23,7 +23,7 @@
     </nav>
 </div>
 
-<div style="margin-left:20%;height: 90%; margin-bottom: 5%; width:50%; margin-top: 2%">
+<div style="margin: auto; height: 90%; width:50%; margin-top: 2%">
     {% if empty_list %}
                     {% block empty_list %}
                         {% include 'recommendation/broken.html' %}
