--- a/templates/landingpage/index.html
+++ b/templates/landingpage/index.html
@@ -24,7 +24,7 @@
                 application
                 needs.<br><br>You can be a student and get access to all the High Schools across New
                 York<br>or
-                you can and be member of the admission committee for your High School<br>and get
+                you can be a member of the admission committee for your High School<br>and get
                 access to
                 all the applications submitted for your school.</p>
             <div class="mb-4 mt-2" style="display: flex; flex-direction: row;">
