--- a/recommendation/templates/recommendation/recommendation_form.html
+++ b/recommendation/templates/recommendation/recommendation_form.html
@@ -53,7 +53,7 @@
 
 
 
-<div style="margin:auto; margin-top: 2%; height: 90%; width:50%;">
+<div style="margin:auto; margin-top: 2%; margin-bottom: 2%; height: 90%; width:50%;">
     <div class="list-group" style="margin-top:10px;">
         <h4> Requested Recommendations </h4>
         {% if recommendations %}
