--- a/logIn/templates/logIn/index.html
+++ b/logIn/templates/logIn/index.html
@@ -55,7 +55,7 @@
                 {% endif %}
                 <a href="{% url 'register:register_user' user_type %}"><button class="btn btn-outline-light mt-3">Create account</button></a>
 {#                <button class="btn btn-outline-light mt-3" onclick="location.href={% url 'register:register_user' user_type %}">Your account</button>#}
-
+                <a href="{% url 'landingpage:index' %}"><button class="btn btn-outline-light mt-3">Back</button></a>
             </div>
         </div>
     </div>
