add recommendations to admissions staff view

--- a/recommendation/templates/recommendation/recommendation_rating.html
+++ b/recommendation/templates/recommendation/recommendation_rating.html
@@ -124,7 +124,7 @@
                     {% endfor %}
                 </tr>
                 <tr>
-                    <th> Perserverance toward goals </th>
+                    <th> Perseverance toward goals </th>
                     {% for radio in form.rating_goals %}
                         <th>{{ radio.tag }}</th>
                     {% endfor %}
