--- a/application/templates/application/loadPrograms.html
+++ b/application/templates/application/loadPrograms.html
@@ -1,4 +1,4 @@
-<option value="">---------</option>
+<option value="" selected>---------</option>
 {% for program in programs %}
 <option value="{{ program.pk }}">{{ program.name }}</option>
 {% endfor %}
