--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -31,7 +31,7 @@
                           aria-expanded="false" style="cursor: pointer;">
                        <i class="fa fa-gear ml-2"></i>
                     </span>
-                    <div class="dropdown-menu dropdown-menu-sm-right" aria-labelledby="dropdown03" style="z-index: 2000; min-width: 11rem;">
+                    <div class="dropdown-menu dropdown-menu-right" style="z-index: 2000;">
                         <a class="dropdown-item" href="{% url 'changepass:index' %} ">Change Password</a>
                         <a class="dropdown-item" href="{% url 'dashboard:logout' %}">Logout</a>
                     </div>
