--- a/static/changepass/css/changepass.css
+++ b/static/changepass/css/changepass.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #f5f5f5;
+}
+
  ul.errorlist {
     margin: 0;
     padding: 0;
@@ -9,7 +13,7 @@
     list-style-position: inside;
     display: block;
     font-size: 1.2em;
-    margin: 0 0 3px;
+    margin: 3px 0 0 3px;
     padding: 4px 5px;
     text-align: center;
     border-radius: 3px;
