--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -22,8 +22,14 @@
                     <span class="font-weight-light" style="text-align: left;margin: 20px 10px;">If you're in charge (or an employee of) of your High School's admission department and want to avoid assessing the 1000s of applications manually... start with OneApply.</span>
                     <span class="font-weight-light" style="text-align: left;margin: 20px 10px;">OneApply is a one stop application portal which provides you with cool features like - a central access location for all the electronically received applications, sorting through the applications based on various programs, student's current school, their grades, accepting and rejecting applications, one-click notifications to students and more.</span>
                 {% endif %}
-                <a href="{% url 'logIn:login_user' user_type %}"><button class="btn btn-outline-light mt-3">Your account</button></a>
-{#                <button class="btn btn-outline-light mt-3" onclick="location.href={% url 'logIn:login_user' user_type %}">Your account</button>#}
+                <div style="display: flex; flex-flow: row wrap; justify-content: center">
+                    <a href="{% url 'landingpage:index' %}">
+                        <button class="btn btn-outline-light mt-3 mr-3">Back to Home</button>
+                    </a>
+                    <a href="{% url 'logIn:login_user' user_type %}">
+                        <button class="btn btn-outline-light mt-3 ml-3">Your account</button>
+                    </a>
+                </div>
             </div>
         </div>
         <div class="col-md-8 right-pane">
