updated changepwd, register to have pwd instructions, bug fixes

--- a/logIn/templates/logIn/index.html
+++ b/logIn/templates/logIn/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/student_theme.min.css' %}">
 {% endif %}
 <link rel="stylesheet" type="text/css" href="{% static 'logIn/css/login.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/floating_form_labels.css' %}">
 
 <body>
 <div class="container-fluid">
