--- a/templates/changepass/resetPass.html
+++ b/templates/changepass/resetPass.html
@@ -18,7 +18,7 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="https://kit.fontawesome.com/fc24e2383c.js" crossorigin="anonymous"></script>
     <!-- Custom styles for this template -->
-    <title>oneapply</title>
+    <title>OneApply</title>
 </head>
 <body>
 <div style="display: flex; flex-direction: column; width: 100%; height: 100%;">
