--- a/logIn/templates/logIn/index.html
+++ b/logIn/templates/logIn/index.html
@@ -40,8 +40,8 @@
                 {% if login_error %}
                     <p class="errorlist" style="color: red">Invalid credentials</p>
                 {% endif %}
-                <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login"/>
                 <a class="mt-3" href="{% url 'changepass:reset_password' user_type %}">Forgot Password?</a>
+                <input class="btn btn-lg btn-primary btn-block mt-3" type="submit" value="Login"/>
             </form>
         </div>
         <div class="col-md-4 right-pane overlay">
